--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="couple.JPG" alt="Francis and Ruth" class="couple-photo">
+    <img src="images/couple.jpg" alt="Francis and Ruth" class="couple-photo">
     <h1>Francis ❤ Ruth</h1>
     <p class="subtitle">You are warmly invited to our engagement ceremony</p>
 
@@ -28,9 +28,9 @@
 
     <div class="preview-container" id="preview-overlay" style="display: none;">
       <div class="preview-slideshow">
-        <img src="love1.jpg" class="preview-img" alt="Photo 1">
-        <img src="love2.jpg" class="preview-img" alt="Photo 2">
-        <img src="love3.jpg" class="preview-img" alt="Photo 3">
+        <img src="images/Love1.jpg" class="preview-img" alt="love 1">
+        <img src="images/Love2.jpg" class="preview-img" alt="love 2">
+        <img src="images/Love3.jpg" class="preview-img" alt="love 3">
       </div>
       <p>Opening Google Meet Shortly</p>
       <button onclick="continueToMeet()" class="continue-btn">Continue to Meet</button>
